FIX - Corrigiendo CSS para cumplir con Mobile First

--- a/src/Banner/Banner.css
+++ b/src/Banner/Banner.css
@@ -30,7 +30,7 @@
     width:100%;
     height:100%;
     -webkit-filter: blur(2px);
-    filter: contrast(0px);    
+    filter: blur(2px);
     filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='2');
   
   }
@@ -44,7 +44,7 @@
       text-align: center;
   }
   .fb-color{
-    background-color:#3b5998;
+    background-color:#017aff;
     color: white;
   }
   .btn{
